[project]
name = "llm-todo-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "openai==1.108.1",
    "python-dotenv==1.1.1",
    "requests==2.32.5",
    "tiktoken==0.11.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]
